--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     config:
       server:
         git:
-          uri:
+          uri: https://github.com/jinn520/springcloudconfig.git
+          search-paths: config
+          default-label: master
+          username: jinn520
+          password:
 server:
   port: 8888
